// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ensure circulate rendering render component 1`] = `
<React.Fragment>
  <Linear />
</React.Fragment>
`;

exports[`ensure circulate rendering render component 2`] = `
<React.Fragment>
  <Linear>
    <Test />
  </Linear>
</React.Fragment>
`;

exports[`ensure circulate rendering render null 1`] = `
<React.Fragment>
  <Linear>
    <Test />
  </Linear>
</React.Fragment>
`;
